<resources>
    <string name="app_name">Encapsulate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_file_upload">FileUpload</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="pin">Pin</string>
    <string name="open_date">Open Date</string>
    <string name="f">false</string>
    <string name="t">true</string>
    <string name="encapsulate">Encapsulate</string>
    <string name="caption">Caption</string>
    <string name="capture_an_image">CAPTURE AN IMAGE</string>
    <string name="open_camera">OPEN CAMERA</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_file">ADD FILE</string>
    <string name="_0">0</string>
    <string name="_20">/20</string>
    <string name="upload">Upload</string>
    <string name="capture">Capture</string>
    <string name="back">Back</string>
    <string name="save">save</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="logo">logo</string>
    <string name="email_address">Email Address</string>
    <string name="not_yet_registered_sign_up_now">Not yet registered? Sign Up Now</string>
    <string name="create_time_capsule">CREATE TIME CAPSULE</string>

    <string name="my_location">My Location</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="already_have_an_account_login_here">Already have an account? Login Here</string>
    <string name="choose_file">Choose File</string>
    <string name="image">image</string>
    <string name="upload_image_file">UPLOAD IMAGE FILE</string>
    <string name="icon">icon</string>
    <string name="time_capsule_name">Time Capsule Name</string>
    <string name="files">Files:</string>
    <string name="_00">00</string>
    <string name="incorrect_pin">Incorrect Pin!</string>
    <string name="submit">submit</string>
    <string name="this_time_capsule_is_lock_please_provide_the_your_capsule_pin_to_open">This time capsule is lock, please provide the your capsule pin to open.</string>
    <string name="time_capsules">Time Capsules</string>
    <string name="no_time_capsules">No Time Capsules</string>
    <string name="user_manual">User Manual</string>
    <string name="about_us">About Us</string>
    <string name="capsules">Capsules</string>
    <string name="hi_user">Hi, User!</string>
    <string name="locations">Locations</string>
    <string name="no_location_record">No location record</string>
    <string name="direction">direction</string>
</resources>