<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".fragments.Home_Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cream"
        android:clickable="false"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_manual"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginBottom="20dp"
            android:background="@color/light_blue"
            android:fontFamily="@font/montserrat"
            android:text="@string/user_manual"
            android:textColor="@color/dark_blue"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_about"
            app:layout_constraintEnd_toEndOf="@+id/btn_about"
            app:layout_constraintStart_toStartOf="@+id/btn_about" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_about"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginBottom="80dp"
            android:background="@color/light_blue"
            android:fontFamily="@font/montserrat"
            android:text="@string/about_us"
            android:textColor="@color/dark_blue"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:clickable="false"
            app:cardBackgroundColor="@color/cream"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_background"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tv_total"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_00"
                        android:textAlignment="center"
                        android:textColor="@color/dark_blue"
                        android:textSize="60sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/capsules"
                        android:textAlignment="center"
                        android:textColor="@color/light_blue"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tv_wel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/pacifico"
                        android:text="@string/hi_user"
                        android:textColor="@color/white"
                        android:textSize="30sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:orientation="horizontal">


                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_lock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="@color/white"
                            android:drawableStart="@drawable/icon_lock"
                            android:fontFamily="@font/montserrat"
                            android:padding="2dp"
                            android:text="@string/_0"
                            android:textColor="@color/dark_blue"
                            android:textSize="25sp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_unlock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="@color/white"
                            android:drawableStart="@drawable/icon_unlock"
                            android:fontFamily="@font/montserrat"
                            android:padding="2dp"
                            android:text="@string/_0"
                            android:textColor="@color/dark_blue"
                            android:textSize="25sp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/logo"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>